favicon.ico folder should be located in root folder

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -4,24 +4,21 @@
 <link
   rel="apple-touch-icon"
   sizes="152x152"
-  href="https://lee-dohyeon.github.io/assets/favicon.io/apple-touch-icon.png"
+  href="{{site.baseurl}}/favicon.io/apple-touch-icon.png"
 />
 <link
   rel="icon"
   type="image/png"
   sizes="32x32"
-  href="https://lee-dohyeon.github.io/assets/favicon.io/favicon-32x32.png"
+  href="{{site.baseurl}}/favicon.io/favicon-32x32.png"
 />
 <link
   rel="icon"
   type="image/png"
   sizes="16x16"
-  href="https://lee-dohyeon.github.io/assets/favicon.io/favicon-16x16.png"
+  href="{{site.baseurl}}/favicon.io/favicon-16x16.png"
 />
-<link
-  rel="manifest"
-  href="https://lee-dohyeon.github.io/assets/favicon.io/site.webmanifest"
-/>
+<link rel="manifest" href="{{site.baseurl}}/favicon.io/site.webmanifest" />
 <meta name="msapplication-TileColor" content="#da532c" />
 <meta name="theme-color" content="#ffffff" />
 <!-- end custom head snippets -->
